--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,10 @@ description: The mindless ramblings of a middle-aged Pakimerican dad
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
- # Resources:
- #   - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
- #   - Learn markdown: "http://www.markdowntutorial.com/"
+  Resources:
+    - Jekyll Generator: "https://jekyllrb.com/"
+    - Learn markdown: "http://www.markdowntutorial.com/"    
+    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
  # Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
@@ -69,8 +70,8 @@ author:
 social-network-links:
   rss: true
   email: "someone@example.com"
-  facebook: deanattali
-  github: waquraishi
+  facebook: 
+  github: #
   twitter: "@wquraishi"
 #  reddit: yourname
 #  linkedin: daattali
@@ -78,7 +79,7 @@ social-network-links:
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
 #  instagram: deanat78
-#  youtube: user/deanat78
+  youtube: user/wquraishi
 #  spotify: yourname
 #  telephone: +14159998888
 #  steam: deanat78
