Added gem jekyll-seo-tag and updated meta information

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@
 title: Hey What!?
 
 # Short description of your site
-description: The mindless ramblings of a middle-aged Pakimerican dad
+description: The mindless ramblings of a middle-aged Pakimerican dad.  Blogs relating to my personal development
+which includes growing spiritualy, physically and emotionally.  Lots of ramblings about the world including
+topics related to Intermittent Fasting, working out, eating healthy, meditation and other special interests.
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -75,7 +77,7 @@ social-network-links:
   github: #
   twitter: "@wquraishi"
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: waseem-quraishi-52a1363
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -259,6 +261,7 @@ prose:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-seo-tag
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
