--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 title: Hey What!?
 
 # Short description of your site
-description: The mindless ramblings of a middle-aged Pakimerican dad.  Blogs relating to my personal development
+description: "The mindless ramblings of a middle-aged Pakimerican dad.  Blogs relating to my personal development
 which includes growing spiritualy, physically and emotionally.  Lots of ramblings about the world including
-topics related to Intermittent Fasting, working out, eating healthy, meditation and other special interests.
+topics related to Intermittent Fasting, working out, eating healthy, meditation and other special interests."
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
